--- a/in/src/main/resources/templates/login.html
+++ b/in/src/main/resources/templates/login.html
@@ -54,6 +54,12 @@ Author URL: http://w3layouts.com
                                class="login-input" />
 <!--                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
                     </div>
+                    <div class="col-md-8 login-center text-start mt-3">
+                        <a href="/oauth2/authorization/github" class="btn btn-dark">
+                            <i class="fab fa-github"></i> Login with GitHub
+                        </a>
+                    </div>
+
                     <div class="col-md-8 login-center text-start">
                         <button class="btn btn-style btn-style-3 text-left">Log In</button>
                         <a  th:href="@{/public/register}" class="new-user text-right" >New User ?</a>
